--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
     <link rel="stylesheet" type="text/css" href="css/colours.css">
-    <link rel="stylesheet" type="text/css" href="css/typography.css">
+    <link rel="stylesheet" type="text/css" href="css/fontstyle.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
+    <style>
+      @media (max-width:667px) {
+        .collapse-carousel-caption {display:none;}
+        .first-section{max-height: 80%;padding-top: 50px;}
+        .desfault-section{min-height: 100%;padding-top:20px;}
+        #section1{background: #FFF;}
+      }
+      @media (min-width:668px) {
+        .first-section{min-height: 100%;padding-top: 60px;}
+        .desfault-section{min-height: 100%;padding-top: 100px;}
+        #section1{background: #DCDCDC;}
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-nav navbar-dark fixed-top">
