--- a/index.html
+++ b/index.html
@@ -60,24 +60,18 @@
     </nav>
     <br>
     <section id="section1" class="first-section">
-      <!--<div class="container">
-        <p>
-          Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa, não importando onde pois, atendemos em qualquer local do Brasil.
-        </p>
-      </div>-->
       <!-- The slideshow -->
       <div id="demo" class="carousel slide" data-ride="carousel">
         <ul class="carousel-indicators">
           <li data-target="#demo" data-slide-to="0" class="active"></li>
           <li data-target="#demo" data-slide-to="1"></li>
-          <li data-target="#demo" data-slide-to="2"></li>
         </ul>
       <div class="carousel-inner center">
         <div class="carousel-item active">
-          <img class="carousel-img center" src="images/articulado.jpg" alt="ônibus articulado">
+          <img class="carousel-img center" src="images/articulado1.jpg" alt="ônibus articulado">
           <div class="carousel-caption collapse-carousel-caption">
             <h5 class="text-center destak">
-            Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa, não importando onde pois, atendemos em qualquer local do Brasil.
+            Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa.
           </h5>
           </div>
         </div>
@@ -85,15 +79,7 @@
           <img class="carousel-img center" src="images/articulado2.jpg" alt="ônibus articulado">
           <div class="carousel-caption collapse-carousel-caption">
             <h5 class="text-center destak">
-            Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa, não importando onde pois, atendemos em qualquer local do Brasil.
-          </h5>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="carousel-img center" src="images/articulado3.jpg" alt="ônibus articulado">
-          <div class="carousel-caption collapse-carousel-caption">
-            <h5 class="text-center destak">
-            Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa, não importando onde pois, atendemos em qualquer local do Brasil.
+            Não importa onde a empresa esteja pois, atendemos em qualquer local do Brasil.
           </h5>
           </div>
         </div>
