--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="pt">
   <head>
-     <title>Vale Bus</title>
+     <title>Vale Bus - Especialista em manutenção de sanfonas e ônibus articulado.</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
