--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="pt">
   <head>
-     <title>Vale Bus - Especialista em manutenção de sanfonas e ônibus articulado.</title>
+     <title>Vale Bus - Manutenção de sanfonas de ônibus articulado.</title>
+     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +34,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-nav navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.jpg" width="auto" height="60" alt="logo">
+        <img src="images/logo.jpg" width="auto" height="70" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -50,10 +51,7 @@
             <a class="nav-link" href="#section3">Nossos Serviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#section4">Nossos Clientes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#section5">Contatos</a>
+            <a class="nav-link" href="#section4">Contatos</a>
           </li>
         </ul>
       </div>
@@ -181,11 +179,6 @@
       </div>
     </section>
     <section id="section4" class="desfault-section">
-      <div class="container">
-          <h2 class="text-center destak">Confira abaixo alguns de nossos clientes</h2>
-      </div>
-    </section>
-    <section id="section5" class="desfault-section">
       <div class="container-fluid">
           <h2 class="text-center destak">Solicite nosso serviços</h2>
           <p class="text-center">
