--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </section>
     <section id="section4" class="desfault-section">
       <div class="container-fluid">
-          <h2 class="text-center destak">Solicite nosso serviços</h2>
+          <h2 class="text-center destak">Solicite nossos serviços</h2>
           <p class="text-center">
             Entre em contato conosco agora mesmo
           </p>
