--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
         .collapse-carousel-caption {display:none;}
         .first-section{max-height: 80%;padding-top: 50px;}
         .desfault-section{min-height: 100%;padding-top:20px;}
+        .half {width: 100%;padding: 2%;}
         #section1{background: #FFF;}
       }
       @media (min-width:668px) {
         .first-section{min-height: 100%;padding-top: 60px;}
         .desfault-section{min-height: 100%;padding-top: 100px;}
+        .half {width: 46%;padding: 2%;}
         #section1{background: #DCDCDC;}
       }
     </style>
@@ -34,7 +36,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-nav navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.jpg" width="auto" height="65" alt="logo">
+        <img src="images/logo.jpg" width="auto" height="70" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -135,86 +137,60 @@
       <div class="container-fluid">
         <h2 class="text-center destak">Nossos Serviços</h2>
         <div class="row">
-          <div class="col-sm-3 cards-div">
-            <div class="card">
-                <h4 class="card-title align-center">Serviço 1</h4>
-              <img class="card-img-top" src="images/imagem_exemplo.jpg" alt="Serviço 1" style="width:100%">
-              <div class="card-body">
-                <p class="card-text">Descrição do serviço 1</p>
-                <a href="#section5" class="btn btn-primary">Solicite agora mesmo!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 cards-div">
-            <div class="card">
-              <h4 class="card-title">Serviço 2</h4>
-              <img class="card-img-top" src="images/imagem_exemplo.jpg" alt="Serviço 1" style="width:100%">
-              <div class="card-body">
-                <p class="card-text">Descrição do serviço 2</p>
-                <a href="#section5" class="btn btn-primary">Solicite agora mesmo!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 cards-div">
-            <div class="card">
-              <h4 class="card-title">Serviço 3</h4>
-              <img class="card-img-top" src="images/imagem_exemplo.jpg" alt="Serviço 1" style="width:100%">
-              <div class="card-body">
-                <p class="card-text">Descrição do serviço 3</p>
-                <a href="#section5" class="btn btn-primary">Solicite agora mesmo!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-3 cards-div">
-            <div class="card">
-              <h4 class="card-title">Serviço 4</h4>
-              <img class="card-img-top" src="images/imagem_exemplo.jpg" alt="Serviço 1" style="width:100%">
-              <div class="card-body">
-                <p class="card-text">Descrição do serviço 4</p>
-                <a href="#section5" class="btn btn-primary">Solicite agora mesmo!</a>
-              </div>
-            </div>
-          </div>
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_1.jpg" class="img-fluid"> </div>
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_2.jpg" class="img-fluid"> </div>
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_3.jpg" class="img-fluid"> </div>
         </div>
+        <div class="row">
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_4.jpg" class="img-fluid"> </div>
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_5.jpg" class="img-fluid"> </div>
+          <div class="p-0 col-2 col-4">
+            <img src="images/foto_6.jpg" class="img-fluid"> </div>
+         </div>
       </div>
     </section>
     <section id="section4" class="desfault-section">
       <div class="container-fluid">
-          <h2 class="text-center destak">Solicite nossos serviços</h2>
+          <h2 class="text-center destak">Solicite nosso serviços</h2>
           <p class="text-center">
             Entre em contato conosco agora mesmo
           </p>
           <div class="row">
-            <div class="col-sm-6">
+            <div class="half">
               <form>
                   <div class="form-group row">
                     <label for="example-text-input" class="col-2 col-form-label">Nome</label>
-                    <div class="col-10">
+                    <div class="col-8">
                       <input class="form-control" type="text" id="example-text-input" placeholder="Nome">
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-10">
+                    <div class="col-8">
                       <input class="form-control" type="text" id="example-text-input" placeholder="Email">
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="example-tel-input" class="col-2 col-form-label">Telefone</label>
-                    <div class="col-10">
+                    <div class="col-8">
                       <input class="form-control" type="tel" id="example-tel-input"placeholder="(55)-555-5555">
                     </div>
                   </div>
                   <div class="form-group row">
                     <label for="example-tel-input" class="col-2 col-form-label">Serviço</label>
-                    <div class="col-10">
+                    <div class="col-8">
                       <input class="form-control" type="text" id="example-text-input" placeholder="Descreva o serviço a ser executado">
                     </div>
                   </div>
                   <button type="submit" class="btn btn-primary" style="float:right;">Enviar informações</button>
               </form>
             </div>
-            <div class="col-sm-6">
+            <div class="half">
               <h4 class="text-center destak">Nossos Contatos</h4>
               <p></p>
               <p class="text-center">
@@ -224,7 +200,7 @@
                 Email
               </p>
             </div>
-          </div>
+          </div> <!-- fecha row -->
         </div>
     </section>
   </body>
