--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
   <head>
      <title>Vale Bus - Manutenção de sanfonas de ônibus articulado.</title>
