--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <section id="section3" class="desfault-section">
       <div class="container-fluid">
         <h2 class="text-center destak">Nossos Serviços</h2>
+        <p class="text-center">Manutenção e reparos em sanfonas de ônibus articulados na garagem da sua empresa.</p>
         <div class="row">
           <div class="p-0 col-2 col-4">
             <img src="images/foto_1.jpg" class="img-fluid"> </div>
