--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="row">
           <div class="col-sm-6 div-cards">
             <div class="card-body">
-              <h6 class="text-center">Sanfona caida (Antes).</h6>
+              <h6 class="text-center">Sanfona caída (Antes).</h6>
               <div class="row">
                 <div class="p-0 col-12">
                   <img src="images/foto_1sa.jpg" class="img-fluid img-Click"> </div>
