--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
      <title>Vale Bus - Manutenção de sanfonas de ônibus articulado.</title>
      <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    
+    <meta name="theme-color" content="#071871">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#071871">
+    <meta name="msapplication-navbutton-color" content="#071871">
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
