--- a/index.html
+++ b/index.html
@@ -1,36 +1,15 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt">
   <head>
-     <title>Vale Bus - Manutenção de sanfonas de ônibus articulado.</title>
-     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <title>teste Vale Bus - Manutenção em sanfonas de ônibus articulados.</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Atendemos em qualquer lugar do Brasil, realizando manutenção especializada em sanfonas de ônibus aticulados. Solicite nossos serviços agora mesmo!">
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/colours.css">
-
-    <style>
-      @media (max-width:667px) {
-        img.logo{width: auto; height: 50px;}
-        .col-6, .col-12{-ms-flex:0 0 33%;flex:0 0 33%;max-width:33%}
-        .collapse-carousel-caption {display:none;}
-        .desfault-section{padding-top: 65px;padding-bottom: 20px;}
-        .img-Click{padding: 2px;}
-        .nav-link{font-size:1.05rem;}
-        .navbar-toggler{padding-top: 12px;}
-        #section1{padding-top: 0px;}
-      }
-      @media (min-width:668px) {
-        img.logo{width: auto; height: 70px;}
-        .desfault-section{padding-top: 90px;padding-bottom: 20px;}
-        .img-Click{padding: 5px;}
-        .nav-item{padding-left: 20px;}
-        .nav-link{font-size:1.35rem;}
-        #section1{padding-top: 0px;}
-      }
-    </style>
-
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-nav navbar-dark fixed-top">
@@ -71,7 +50,7 @@
 
         <div class="carousel-inner center">
           <div class="carousel-item active">
-            <img class="carousel-img center" src="images/articulado1.jpg" alt="ônibus articulado">
+            <img class="carousel-img" src="images/articulado1.jpg" alt="ônibus articulado">
             <div class="carousel-caption collapse-carousel-caption">
               <h5 class="text-center destak">
                 Manutenção e reparos em sanfonas de ônibus articulados de forma rápida na garagem da sua empresa.
@@ -79,7 +58,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="carousel-img center" src="images/articulado2.jpg" alt="ônibus articulado">
+            <img class="carousel-img" src="images/articulado2.jpg" alt="ônibus articulado">
             <div class="carousel-caption collapse-carousel-caption">
               <h5 class="text-center destak">
                 Não importa onde a empresa esteja pois, atendemos em qualquer local do Brasil.
@@ -163,7 +142,7 @@
         </div>
         <div class="well">
           <h6 class="text-center">Levantamento de sanfonas.</h6>
-        </dv>
+        </div>
         <div class="row">
           <div class="col-sm-6 div-cards">
             <div class="card-body">
@@ -245,15 +224,15 @@
         </div>
       </div>
     </section>
-    <footer>
-      <p  class="copyright">Valebus &copy; 2018</p>
+    <footer class="copyright">
+      <p class="copyright">Valebus &copy; 2018</p>
     </footer>
   </body>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script src="js/scrolling.js"></script>
+  <!--<script src="js/scrolling.js"></script>-->
   <script>
     $(".nav-link").on("click", function(){
      $('.navbar-collapse').collapse('hide');
