--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <title>teste Vale Bus - Manutenção em sanfonas de ônibus articulados.</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <title>Vale Bus - Manutenção em sanfonas de ônibus articulados.</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Atendemos em qualquer lugar do Brasil, realizando manutenção especializada em sanfonas de ônibus aticulados. Solicite nossos serviços agora mesmo!">
@@ -68,12 +68,12 @@
         </div>
 
         <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <!--<a class="carousel-control-prev" href="#demo" data-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </a>
         <a class="carousel-control-next" href="#demo" data-slide="next">
           <span class="carousel-control-next-icon"></span>
-        </a>
+        </a>-->
       </div>
     </section>
     <section id="section2" class="desfault-section">
@@ -181,7 +181,7 @@
         </div>
         <div class="row">
           <div class="col-sm-7">
-            <form name="FrmContato" method="post" action="teste.php">
+            <form name="FrmContato" method="post" action="enviar.php">
                 <div class="form-group row">
                   <label for="example-text-input" class="col-sm-2 col-form-label">Empresa</label>
                   <div class="col-sm-10">
@@ -232,7 +232,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <!--<script src="js/scrolling.js"></script>-->
+  <script src="js/scrolling.js"></script>
   <script>
     $(".nav-link").on("click", function(){
      $('.navbar-collapse').collapse('hide');
